fix horizontal scrollbar caused by navigation overlay

--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -58,7 +58,7 @@
       content: '';
       position: absolute;
       display: block;
-      width: 100vw;
+      width: 100%;
       height: 10rem;
       background: linear-gradient(
         v.$nav-overlay-gradient-start-color 0%,
